tests/files/type_checker_tests/should_pass/166.cmdr
//Test that subtract operation type checks
x = 1 - 2.3;
