tests/files/type_checker_tests/should_fail/041.cmdr
//Should fail when subtract setting incompatible types
x = 3;
x -= true;
